--- a/css/styles.css
+++ b/css/styles.css
@@ -1,3 +1,7 @@
+td{
+    width:100%;
+    display:block;
+}
 #search{
   background: #e1e8f0;
   padding: 15px;
@@ -46,7 +50,7 @@
 .Rtable {
   display: flex;
   flex-wrap: wrap;
-  margin: 0 0 3em 0;
+  margin: 0 0 0em 0;
   padding: 0;
 }
 .Rtable-cell {
