--- a/css/styles.css
+++ b/css/styles.css
@@ -41,7 +41,11 @@ td{
 #addpiece{
   display: none;
 }
-
+.heading{
+  /* margin: 0 0 0.5em 0;
+  padding: 0.6em 0.6em 0.6em 2em; */
+  display: inline-block;
+}
 /* Variables
 ================================== */
 /* Tables
